--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #29303A;">
 
@@ -61,9 +60,7 @@
         <div class="search-bar" style="display: hidden;">
 
         </div>
-
         <!-- End Search Bar -->
-
         <nav id="header" class="header-nav ms-auto">
             <ul class=" d-flex align-items-center">
                 <!-- End Search Icon-->
@@ -179,10 +176,10 @@
 
     </aside><!-- End Sidebar-->
 
-    <main id="main" class="main bg-cover bg-no-repeat"
-        style="background-image: url(' ~/Content/assets/img/Background/BG.jpg')">
+    <main id="main" class="main layoutbg">
         @*<section class="section">*@
         <div class="content-wrapper" ng-app="MJCasinoapp">
+         
             @RenderBody()
         </div>
         @*</section>*@
