--- a/casino_testapp/Views/Gamelist/Slot.cshtml
+++ b/casino_testapp/Views/Gamelist/Slot.cshtml
@@ -1,70 +1,104 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Slot";
 }
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <div ng-controller="slotCtrlr">
 
+
+    <div class="row col-sm-12">
+        <i class="bi bi-arrow-left"></i>
+    </div>
     <div class="nav iconbg">
         <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Home/Index">
+                <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Home/Index">
                     <img src="~/Content/assets/img/Dashboard/Home.png" alt="">
 
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45 active" id="Slot-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Slot">
+                <a class="nav-link w-45 active" id="Slot-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Slot">
                     <img src="~/Content/assets/img/Dashboard/Slotmachine.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Card">
+                <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Card">
                     <img src="~/Content/assets/img/Dashboard/CARDs.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Crown-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Crown">
+                <a class="nav-link w-45" id="Crown-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Crown">
                     <img src="~/Content/assets/img/Dashboard/Crown.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Fish">
+                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Fish">
                     <img src="~/Content/assets/img/Dashboard/Fish.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Ball-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Ball">
+                <a class="nav-link w-45" id="Ball-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Ball">
                     <img src="~/Content/assets/img/Dashboard/Ball.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Cockfight">
+                <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Cockfight">
                     <img src="~/Content/assets/img/Dashboard/weather-cock.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Arcade-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Arcade">
+                <a class="nav-link w-45" id="Arcade-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Arcade">
                     <img src="~/Content/assets/img/Dashboard/Arcade.png" alt="">
 
                 </a>
             </li>
         </ul>
     </div>
-    <div class="row">
-        <h2>Slot</h2>
-    </div>
+    <div class="card" style="background: transparent;">
+        <div class="card-body" style="background: transparent;">
+            <!-- Bordered Tabs Justified -->
+            <ul class="nav nav-tabs nav-tabs-bordered d-flex" id="trialni" role="tablist">
+                <li class="nav-item flex-fill" role="presentation">
+                    <a class=" w-5" id="JL" role="tab" aria-controls="home" aria-selected="true">
+                        <img src="~/Content/assets/img/icons/icon_jili.png" style="width: 50px; cursor:pointer"> </a>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                    <a class="w-5" id="PP" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                        <img src="~/Content/assets/img/icons/icon_pragmatic.png"
+                            style="width: 50px; cursor:pointer"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="row col-12 rowalign limitheight" style="overflow-y: auto;">
+            <div class="col-2 responsiveimg" ng-repeat="x in Gamelist">
+                <div class="card " style="width: fit-content; background:gray">
+                    <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
+                        style="background-color: transparent; border:none; align-self:flex-start">
+                        <img src="{{x.gameCover}}" class="img-size" ng-model="x">
+                    </button>
+                    <label class="form-control-plaintext" style="color:white; font-size:85%;">{{x.gameName}}</label>
+                </div>
+            </div>
+
+
+        </div>
+        <button type="button" ng-click="viewmore()" style="text-align: center;">View more</button>
+    </div><!-- End Bordered Tabs Justified -->
+
+
+</div>
 </div>
 
 
 @section scripts {
-<script src="~/Scripts/AngularJs/Gamelist/slotCtrlr.js"></script>
+    <script src="~/Scripts/AngularJs/Gamelist/slotCtrlr.js"></script>
 }
