--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -179,7 +179,7 @@
     <main id="main" class="main layoutbg">
         @*<section class="section">*@
         <div class="content-wrapper" ng-app="MJCasinoapp">
-         
+
             @RenderBody()
         </div>
         @*</section>*@
@@ -211,7 +211,7 @@
     <script src="~/Content/assets/vendor/simple-datatables/simple-datatables.js"></script>
     <script src="~/Content/assets/vendor/tinymce/tinymce.min.js"></script>
     <script src="~/Content/assets/vendor/php-email-form/validate.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Template Main JS File -->
     <script src="~/Content/assets/js/main.js"></script>
 
