--- a/casino_testapp/Views/Home/Index.cshtml
+++ b/casino_testapp/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45 active" id="home-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Home/Index">
-                    <img src="~/Content/assets/img/Dashboard/Home.png" alt="">
-                    <span style="margin-left:-55px; display:inline; color:white;">Home</span>
+                    <img src="~/Content/assets/img/Dashboard/Home_name.png" alt="">
+
                 </a>
 
             </li>
@@ -29,7 +29,7 @@
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Gamelist/Card">
-                    <img src="~/Content/assets/img/Dashboard/CARDs.png" alt="">
+                    <img src="~/Content/assets/img/Dashboard/Poker.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
@@ -53,13 +53,13 @@
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Gamelist/Cockfight">
-                    <img src="~/Content/assets/img/Dashboard/weather-cock.png" alt="">
+                    <img src="~/Content/assets/img/Dashboard/e_sabong.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Arcade-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Arcade">
-                    <img src="~/Content/assets/img/Dashboard/Arcade.png" alt="">
+                <a class="nav-link w-45" id="MiniGames-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/MiniGames">
+                    <img src="~/Content/assets/img/Dashboard/MiniGames.png" alt="">
 
                 </a>
             </li>
