--- a/casino_testapp/Content/assets/css/style.css
+++ b/casino_testapp/Content/assets/css/style.css
@@ -49,9 +49,6 @@ h6 {
 
 
 
-::-webkit-scrollbar{
-  display: none;
-}
 
 
 .nobg {
@@ -68,6 +65,7 @@ h6 {
 }
 
 .iconbg {
+  opacity: 75%;
   background-image: url('../img/Dashboard/ICONS_BG2.png');
   display: block;
   background-position: center;
@@ -79,14 +77,26 @@ h6 {
 
 }
 
+
 .navbars {
     display:unset;
 }
 
-.navbars::-webkit-scrollbar{
+/* .navbars::-webkit-scrollbar{
+  background: black;
+} */
 
+.scroller {
+  max-width: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+  scrollbar-color: rgb(0, 0, 0) #f9f9f9;
+
+}
+.scroller::-webkit-scrollbar-button {
   display: none;
 }
+
 .navbuttons {
     display: inline-block;
     overflow: auto;
@@ -99,6 +109,8 @@ h6 {
 .navbuttons LI {
     display: inline-block;
     vertical-align: top;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .rowalign {
   display: flex;
@@ -115,17 +127,30 @@ h6 {
     width: 130px;
     height: 130px;
 }
+.bttntext {
+  color:rgb(255, 255, 255);
+   font-size:65%;
+    cursor:pointer;
+     text-align:start;
+     text-decoration-line: underline;
+}
 @media (max-width: 1199px) {
   .responsiveimg {
     width: 30%;
   }
   .img-size{
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
   }
   .limitheight {
     height: 500px;
-
+  }
+  .bttntext {
+    color:rgb(255, 255, 255);
+     font-size:45%;
+      cursor:pointer; 
+     text-align:start;
+      text-decoration-line: underline;
   }
 }
 @media (max-width: 1199px) {
