--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -20,9 +20,8 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+          rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="~/Content/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -54,11 +53,10 @@
 <body id="authBody">
 
     <main ng-app="loginApp" ng-controller="loginCtrlr">
-        <div>
+    
             <div class="container">
 
-                <section
-                    class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+                <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
@@ -88,7 +86,7 @@
                                             <div class="col-12">
                                                 <div class="form-floating">
                                                     <input type="text" name="username" class="form-control"
-                                                        id="yourUsername" required>
+                                                           id="yourUsername" required>
                                                     <label for="yourUsername">Username</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your username.</div>
@@ -96,7 +94,7 @@
                                             <div class="col-12">
                                                 <div class="form-floating">
                                                     <input type="password" name="password" class="form-control"
-                                                        id="yourPassword" required>
+                                                           id="yourPassword" required>
                                                     <label for="yourPassword">Password</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your password.</div>
@@ -105,20 +103,22 @@
                                             <div class="col-12">
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" name="remember"
-                                                        value="true" id="rememberMe">
+                                                           value="true" id="rememberMe">
                                                     <label class="form-check-label" for="rememberMe">Remember me</label>
                                                 </div>
                                             </div>
                                             <div class="col-12">
                                                 <button id="authButton" class="btn btn-lg w-100" type="submit"
-                                                    ng-click="clickni();">
+                                                        ng-click="clickni();">
                                                     Login
                                                 </button>
                                             </div>
                                             <div class="col-12">
                                                 <p class="small mb-0">
-                                                    Don't have account? <a href="/Authorization/Registration">Create an
-                                                        account</a>
+                                                    Don't have account? <a href="/Authorization/Registration">
+                                                        Create an
+                                                        account
+                                                    </a>
                                                 </p>
                                             </div>
                                         </form>
@@ -133,11 +133,12 @@
                 </section>
 
             </div>
-        </div>
+     
     </main><!-- End #main -->
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+        <i class="bi bi-arrow-up-short"></i>
+    </a>
 
     <!-- Vendor JS Files -->
 
@@ -146,7 +147,7 @@
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/AngularJs/Authorization/login.js"></script>
-
+    
 
 
 
@@ -162,17 +163,6 @@
 
     <!-- Template Main JS File -->
     <script src="~/Content/assets/js/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
