--- a/casino_testapp/Views/Gamelist/MiniGames.cshtml
+++ b/casino_testapp/Views/Gamelist/MiniGames.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Ball";
+    ViewBag.Title = "Arcade";
 }
 <div class="nav iconbg">
     <div class="nav iconbg">
         <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home"
+                <a class="nav-link w-45 " id="home-tab" role="tab" aria-controls="home"
                    aria-selected="true" href="~/Home/Index">
                     <img src="~/Content/assets/img/Dashboard/Home.png" alt="">
 
@@ -20,15 +20,15 @@
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Card">
-                    <img src="~/Content/assets/img/Dashboard/CARDs.png" alt="">
+                <a class="nav-link w-45" id="Poker-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Poker">
+                    <img src="~/Content/assets/img/Dashboard/Poker.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Crown-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Crown">
-                    <img src="~/Content/assets/img/Dashboard/Crown.png" alt="">
+                <a class="nav-link w-45" id="Live-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Live">
+                    <img src="~/Content/assets/img/Dashboard/Live.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
@@ -38,29 +38,28 @@
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45 active" id="Ball-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Ball">
-                    <img src="~/Content/assets/img/Dashboard/Ball.png" alt="">
+                <a class="nav-link w-45" id="Sports-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Sports">
+                    <img src="~/Content/assets/img/Dashboard/Sports.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home"
                    aria-selected="true" href="~/Gamelist/Cockfight">
-                    <img src="~/Content/assets/img/Dashboard/weather-cock.png" alt="">
+                    <img src="~/Content/assets/img/Dashboard/e_sabong.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Arcade-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Arcade">
-                    <img src="~/Content/assets/img/Dashboard/Arcade.png" alt="">
+                <a class="nav-link w-45 active" id="MiniGames-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/MiniGames">
+                    <img src="~/Content/assets/img/Dashboard/MiniGames_name.png" alt="">
 
                 </a>
             </li>
         </ul>
     </div>
-</div>
-
+    </div>
 <div class="row">
-    <h2>Ball</h2>
+    <h2>Arcade</h2>
     </div>
 
