--- a/casino_testapp/Views/Gamelist/Slot.cshtml
+++ b/casino_testapp/Views/Gamelist/Slot.cshtml
@@ -4,10 +4,6 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <div ng-controller="slotCtrlr">
 
-
-    <div class="row col-sm-12">
-        <i class="bi bi-arrow-left"></i>
-    </div>
     <div class="nav iconbg">
         <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
@@ -21,84 +17,165 @@
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45 active" id="Slot-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Gamelist/Slot">
-                    <img src="~/Content/assets/img/Dashboard/Slotmachine.png" alt="">
+                    <img src="~/Content/assets/img/Dashboard/Slotmachine_name.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Card">
-                    <img src="~/Content/assets/img/Dashboard/CARDs.png" alt="">
+                <a class="nav-link w-45" id="Poker-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Poker">
+                    <img src="~/Content/assets/img/Dashboard/Poker.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Crown-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Crown">
-                    <img src="~/Content/assets/img/Dashboard/Crown.png" alt="">
+                <a class="nav-link w-45" id="Live-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Live">
+                    <img src="~/Content/assets/img/Dashboard/Live.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Fish">
+                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Fish">
                     <img src="~/Content/assets/img/Dashboard/Fish.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Ball-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Ball">
-                    <img src="~/Content/assets/img/Dashboard/Ball.png" alt="">
+                <a class="nav-link w-45" id="Sports-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Sports">
+                    <img src="~/Content/assets/img/Dashboard/Sports.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Gamelist/Cockfight">
-                    <img src="~/Content/assets/img/Dashboard/weather-cock.png" alt="">
+                    <img src="~/Content/assets/img/Dashboard/e_sabong.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Arcade-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Arcade">
-                    <img src="~/Content/assets/img/Dashboard/Arcade.png" alt="">
+                <a class="nav-link w-45" id="MiniGames-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/MiniGames">
+                    <img src="~/Content/assets/img/Dashboard/MiniGames.png" alt="">
 
                 </a>
             </li>
         </ul>
     </div>
-    <div class="card" style="background: transparent;">
-        <div class="card-body" style="background: transparent;">
-            <!-- Bordered Tabs Justified -->
-            <ul class="nav nav-tabs nav-tabs-bordered d-flex" id="trialni" role="tablist">
-                <li class="nav-item flex-fill" role="presentation">
-                    <a class=" w-5" id="JL" role="tab" aria-controls="home" aria-selected="true">
-                        <img src="~/Content/assets/img/icons/icon_jili.png" style="width: 50px; cursor:pointer"> </a>
-                </li>
-                <li class="nav-item flex-fill" role="presentation">
-                    <a class="w-5" id="PP" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
-                        <img src="~/Content/assets/img/icons/icon_pragmatic.png"
-                            style="width: 50px; cursor:pointer"></a>
-                </li>
-            </ul>
-        </div>
-        <div class="row col-12 rowalign limitheight" style="overflow-y: auto;">
-            <div class="col-2 responsiveimg" ng-repeat="x in Gamelist">
-                <div class="card " style="width: fit-content; background:gray">
-                    <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
-                        style="background-color: transparent; border:none; align-self:flex-start">
-                        <img src="{{x.gameCover}}" class="img-size" ng-model="x">
-                    </button>
-                    <label class="form-control-plaintext" style="color:white; font-size:85%;">{{x.gameName}}</label>
+
+    <div class="nav scroller" style="background: transparent;">
+        <!-- Bordered Tabs Justified -->
+        <ul class=" navbars nav-tabs nav-tabs-bordered d-flex navbuttons scroller " id="trialni" role="tablist"
+            style="padding-top:30px;">
+            <li class="nav-item flex-fill" role="presentation">
+                <a class=" w-5" id="JL" role="tab" aria-controls="home" aria-selected="true">
+                    <img src="~/Content/assets/img/icons/icon_jili.png" style="width: 50px; cursor:pointer"> </a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="PP" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_pragmatic.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="FC" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_fachai.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="PGS" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_pgsoft.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="CQ9" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_cq9.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="SPNX" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_spinix.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="SPDG" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_spadegamming.png" style="width: 50px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="EVONTT" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_netent.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="HB" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_hanabero.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="EVOP" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_evo.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="EVOBTG" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_evo.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="EVONLC" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_evo.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="EVORT" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_evo.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="PNG" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_playngo.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="YBNGO" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_yellowbat.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="ILU" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_iloveu.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="AP" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_advantplay.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+
+            <li class="nav-item flex-fill" role="presentation">
+                <a class="w-5" id="HSD" role="tab" aria-controls="contact" aria-selected="false" tabindex="-1">
+                    <img src="~/Content/assets/img/icons/icon_hacksaw.png" style="width: 80px; cursor:pointer"></a>
+            </li>
+        </ul>
+    </div>
+    <div class="row col-12 rowalign limitheight" style="overflow-y: auto; justify-content:center;">
+        <div class="col-1 responsiveimg" ng-repeat="x in Gamelist | limitTo :limit">
+            <div ng-show="opengameUrl">
+                <div id="iframe1">
+
                 </div>
+
             </div>
 
-
+            <div class="card " style="width: fit-content; background:transparent;" ng-show="gamelistUrl">
+                <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
+                    style="background-color: transparent; border:none; align-self:flex-start">
+                    <img src="{{x.gameCover}}" class="img-size" ng-model="x">
+                    <label class="form-control-plaintext bttntext">{{x.gameName}}</label>
+                </button>
+            </div>
         </div>
-        <button type="button" ng-click="viewmore()" style="text-align: center;">View more</button>
-    </div><!-- End Bordered Tabs Justified -->
+    </div>
+
+    <div class="row" style="display: flex; justify-content: center;">
+
+        <button type="button" ng-click="viewmore()"
+            style="height: 50px;width: 50px;text-align: center;background: transparent;color: white;border-radius: 50%;background-color: transparent;border: none;font-size: 45px;">...</button>
 
 
-</div>
-</div>
+    </div>
+
+</div><!-- End Bordered Tabs Justified -->
+
+
+
 
 
 @section scripts {
-    <script src="~/Scripts/AngularJs/Gamelist/slotCtrlr.js"></script>
+    <script src="~/Scripts/AngularJs/Gamelist/slotCtrl.js"></script>
 }
