--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
                 <img src="~/Content/assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block" style="color:beige;">Mj Casino</span>
+                @* <span class="d-none d-lg-block" style="color:beige;">Mj Casino</span> *@
             </a>
             <i class="bi bi-list toggle-sidebar-btn" id="toggle" style="color: beige;"> <span></span></i>
         </div><!-- End Logo -->
