--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -87,16 +87,14 @@
 
                                             <div class="col-12">
                                                 <div class="form-floating">
-                                                    <input type="text" name="username" class="form-control"
-                                                        id="yourUsername" required>
+                                                    <input type="text" name="username" class="form-control" id="yourUsername" ng-model="username" required>
                                                     <label for="yourUsername">Username</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your username.</div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-floating">
-                                                    <input type="password" name="password" class="form-control"
-                                                        id="yourPassword" required>
+                                                    <input type="password" name="password" class="form-control" id="yourPassword" ng-model="password" required>
                                                     <label for="yourPassword">Password</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your password.</div>
@@ -111,7 +109,7 @@
                                             </div>
                                             <div class="col-12">
                                                 <button id="authButton" class="btn btn-lg w-100" type="submit"
-                                                    ng-click="clickni();">
+                                                    ng-click="login();">
                                                     Login
                                                 </button>
                                             </div>
