login/account update

--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -144,7 +144,7 @@
 
 
 
-    <script src="~/Scripts/angular.js"></script>
+    @*<script src="~/Scripts/angular.js"></script>*@
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/AngularJs/Authorization/login.js"></script>
     
