--- a/casino_testapp/Views/Home/Index.cshtml
+++ b/casino_testapp/Views/Home/Index.cshtml
@@ -71,8 +71,13 @@
             <span style="display: flex;background:yellow; margin-bottom:5px;">
                 <i class="bi bi-megaphone"></i>
                 <label style="display:flex; width:100%">
-                    <marquee>
-                        Announcement
+                    <marquee style="text-align: center;">
+                        Thank you for playing PHLBET888. Bet more Win more! &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
+                        &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
+                        &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
                     </marquee>
                 </label>
             </span>
