--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                 </li>
                 <li class="nav-item dropdown pe-3">
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="~/Content/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <img src="~/Content/assets/img/account_avatar.png" alt="Profile" class="rounded-circle">
 
                     </a><!-- End Profile Iamge Icon -->
 
@@ -90,7 +90,7 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                            <a class="dropdown-item d-flex align-items-center" href="~/Profile/Account">
                                 <i class="bi bi-person"></i>
                                 <span>My Profile</span>
                             </a>
